frontend/test/should_fail/matchclassimplementsnondefdef_001.grg
#using "matchclassmodel.gm"

test t() implements shared
{
---
	def n:Node;
}

match class shared
{
	n:Node;
}
